# demoreel

./: .gitignore  LICENSE  README.md  SKILL.md
engine/: .gitignore  README.md  pyproject.toml
engine/demoreel/: __init__.py  align.py  audio.py  brand.py  capture.py  check.py  cli.py  compose.py  keyframes.py  overlay_js.py  render.py  spec.py  stage.py  subtitles.py  themes.py  tts.py
engine/examples/: playwright-tour.yaml
