[project]
name = "demoreel"
version = "0.1.0"
description = "Programmatic demo video walkthroughs — Playwright browser capture, auto zoom-to-click, TTS voiceover, and subtitles, driven by a declarative YAML spec."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "playwright>=1.44",
    "moviepy>=2.1.1",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "Pillow>=10.2",
    "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
# Local, fully open-source neural TTS (recommended default voice engine).
piper = ["piper-tts>=1.2"]
# Cloud TTS providers for polished, customer-facing voiceovers.
cloud = ["openai>=1.30"]
# Word-level alignment for karaoke captions.
align = ["faster-whisper>=1.0"]
all = ["piper-tts>=1.2", "openai>=1.30", "faster-whisper>=1.0"]

[project.scripts]
demoreel = "demoreel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demoreel"]

[tool.ruff]
line-length = 100
