[project]
name = "demoreel"
dynamic = ["version"]
description = "Programmatic demo video walkthroughs — Playwright browser capture, auto zoom-to-click, TTS voiceover, captions, and studio framing, driven by a declarative YAML spec."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Our Nature" }]
keywords = ["demo", "video", "screencast", "playwright", "tts", "automation", "marketing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "playwright>=1.61.0",
    "moviepy>=2.1.1",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "Pillow>=10.2",
    "imageio-ffmpeg>=0.5",
]

[project.urls]
Homepage = "https://our-nature.github.io/demoreel/"
Repository = "https://github.com/our-nature/demoreel"
Issues = "https://github.com/our-nature/demoreel/issues"

[project.optional-dependencies]
# Local, fully open-source neural TTS (recommended default voice engine).
piper = ["piper-tts>=1.2"]
# Higher-quality local OSS neural TTS (Apache-2.0). No API key, runs offline.
kokoro = ["kokoro-onnx>=0.3.0"]
# OpenAI cloud TTS (and OpenAI-compatible endpoints). ElevenLabs needs only an
# ELEVENLABS_API_KEY — no package — so it is not listed here.
cloud = ["openai>=2.44.0"]
# Word-level alignment for karaoke captions.
align = ["faster-whisper>=1.0"]
all = [
    "piper-tts>=1.2",
    "kokoro-onnx>=0.3.0",
    "openai>=2.44.0",
    "faster-whisper>=1.0",
]

[project.scripts]
demoreel = "demoreel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single source of truth for the version: demoreel/__init__.py `__version__`.
[tool.hatch.version]
path = "demoreel/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["demoreel"]

[tool.hatch.build.targets.sdist]
include = ["demoreel", "examples", "README.md", "LICENSE"]

# Dev tooling — installed by `uv sync` (the default group) and `uv sync --all-extras`.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.15.20",
    "pyright>=1.1.411",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, UP pyupgrade, B bugbear, BLE blind-except,
# S bandit (security), SIM simplify, RUF ruff-specific. The source already carries the
# matching noqa markers; this turns the rules that back them on.
select = ["E", "W", "F", "I", "UP", "B", "BLE", "S", "SIM", "RUF"]
ignore = [
    "S603",   # subprocess call — we deliberately shell out to say/afconvert/ffmpeg
    "S607",   # start-process with a partial path — those tools live on PATH
    "E501",   # line length is enforced by the formatter, not the linter
    "RUF001", # typographic chars (×, –, —) are used deliberately in user-facing strings
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S310", "BLE001"] # asserts + test fixtures are trusted

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run is fast & dependency-light: skip anything needing a real browser or ffmpeg.
addopts = "-m 'not browser and not slow' --strict-markers"
markers = [
    "browser: needs a real Chromium via Playwright",
    "slow: full or partial render through moviepy + ffmpeg",
    "piper: needs the piper extra and a downloaded voice model",
]

[tool.coverage.run]
source = ["demoreel"]
omit = ["demoreel/cli.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.pyright]
include = ["demoreel"]
exclude = ["**/.venv", "**/__pycache__", "tests/fixtures"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
# Optional heavy deps (piper, kokoro, openai, faster-whisper) are lazy-imported behind
# try/except and may be absent; don't fail type-checking on their missing stubs.
reportMissingImports = false
reportMissingModuleSource = false
reportAttributeAccessIssue = false
